Changed text colors and fixed overflow

--- a/surface/css/joomla.css
+++ b/surface/css/joomla.css
@@ -95,7 +95,7 @@ padding-top: 1em;
 background-color: rgb(223, 223, 223);
 }
 
-.moduletable ul li:hover:after, .moduletableaccordion ul li:hover:after{
+.Left>.moduletable ul li:hover:after, .Left>.moduletableaccordion ul li:hover:after{
 content: " ";
 float: right;
 margin-left: 20px;
